# crispr-gpu

./: .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: ci.yml  conda-build.yml  conda.yml  docker-publish.yml  release.yml
benchmarks/: README.md  kernel_microbench.cu  run_synthetic.sh
conda/: meta.yaml
docker/: README.md
docs/: benchmarks.md  getting_started.md  reproducibility.md  schemas.md  supply_chain.md
include/crispr_gpu/: engine.hpp  fm_index.hpp  genome_index.hpp  scoring.hpp  types.hpp  version.hpp
python/: bindings.cpp  pyproject.toml
reports/sample/: bench_synthetic.jsonl  bench_synthetic.stdout.txt  report.json  report.md
reports/sample/demo/: demo.idx  demo_guides.tsv  index.stderr.txt  score_cpu.json
schemas/: report.v1.json
scripts/: artifact_run.py
src/: cli_main.cpp  engine.cpp  fm_index.cpp  genome_index.cpp  genome_index_build.cpp  kernels.cu  scoring.cpp
tests/cpp/: CMakeLists.txt
tests/python/: test_artifact_report_golden.py
