[build-system]
requires = ["scikit-build-core>=0.5.1", "pybind11>=2.12", "cmake>=3.18"]
build-backend = "scikit_build_core.build"

[project]
name = "crispr"
version = "0.1.0"
description = "CUDA-accelerated CRISPR off-target search"
authors = [{ name = "crispr authors" }]
license = { text = "MIT" }
readme = "../README.md"
requires-python = ">=3.8"

[tool.scikit-build]
minimum-version = "0.5"
cmake.verbose = true
wheel.py-api = "cp38"
cmake.source-dir = ".."
